@@ -21,6 +21,7 @@ public:
 	~RageInput();
 
 	void Update( float fDeltaTime );
+	void GetDevicesAndDescriptions(vector<InputDevice>& vDevicesOut, vector<CString>& vDescriptionsOut);
 };
 
 extern RageInput*			INPUTMAN;	// global and accessable from anywhere in our program
